--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Libertinus+Mono&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<!-- g -->
+    <!-- g -->
 </head>
 <body>
-   <div class="header">
-    <div class="contioner">
+   <div id="header">
+    <div id="contioner">
         <div class="menu">
-            <div class="logo"><img src="images/Mary (1).png" alt="Mary (1).png" width="120"></div>
-           <div class="menupart"> <ul>
-                <li><a href="#">Portfoilo</a></li>
-                <li><a href="#">Blog</a></li>
-            </ul>
-             <a class="one" href="#">Hire Me</a></div>
+            <div class="logo"> <img src="images/Mary (1).png" alt="Mary (1).png" width="120"></div>
+            <div class="menupart">
+                <ul> 
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <div class="button"><a href="#">Hire Me</a></div>
+                </ul>
+            </div>
         </div>
     </div>
    </div>
