--- a/index.html
+++ b/index.html
@@ -5,26 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class-09</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- g -->
+    <!-- google font start -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Libertinus+Mono&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <!-- g -->
+    <!-- google font end-->
 </head>
 <body>
-   <div id="header">
-    <div id="contioner">
-        <div class="menu">
-            <div class="logo"> <img src="images/Mary (1).png" alt="Mary (1).png" width="120"></div>
-            <div class="menupart">
-                <ul> 
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <div class="button"><a href="#">Hire Me</a></div>
-                </ul>
+    <!-- header start  -->
+    <div id="header">
+        <!-- contioner start  -->
+        <div id="contioner">
+            <!-- logomenu start  -->
+            <div class="logomenu">
+                <!-- logo start  -->
+                <div class="logo">
+                    <img src="images/Mary (1).png" alt="Mary (1).png" width="120">
+                </div>
+                <!-- logo end  -->
+                 <!-- menu start  -->
+                  <div class="menu">
+                    <ul>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Blog</a></li>
+                    </ul>
+                    <!-- button start  -->
+                    <div id="button"><a href="#">Hire Me</a></div>
+                    <!-- button end  -->
+                  </div>
+                  <!-- menu end  -->
             </div>
+            <!-- logomenu end  -->
         </div>
+         <!-- contioner end -->
     </div>
-   </div>
+    <!-- header end  -->
 </body>
 </html>
